# feed-warrior

./: .env.example  .gitignore  Makefile  README.md  accounts_seed.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json  vercel.ts
api/: digest.py
docs/superpowers/plans/: 2026-05-11-feed-warrior.md
docs/superpowers/specs/: 2026-05-11-twitter-warrior-design.md
migrations/: 001_init.sql  002_engagement.sql
src/feed_warrior/: apify_client.py  cli.py  config.py  drafter.py  email.py  filter.py  llm.py  store.py
templates/: digest.html.j2
tests/: conftest.py
tests/integration/: test_apify_smoke.py  test_store_roundtrip.py
tests/unit/: test_api_handler.py  test_apify_client.py  test_cli.py  test_config.py  test_drafter.py  test_email.py  test_filter.py  test_llm.py
