[project]
name = "feed-warrior"
version = "0.1.0"
description = "Daily AI-tweet content engine"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "httpx>=0.27",
    "anthropic>=0.45",
    "click>=8.1",
    "jinja2>=3.1",
    "resend>=2.4",
    "apify-client>=1.8",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.7",
]

[project.scripts]
feed-warrior = "feed_warrior.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feed_warrior"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
